pypi_formula_mappings: update for gdown
Signed-off-by: Rui Chen <rui@chenrui.dev>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -356,6 +356,9 @@
   "gcalcli": {
     "exclude_packages": ["certifi"]
   },
+  "gdown": {
+    "exclude_packages": ["certifi"]
+  },
   "ggshield": {
     "exclude_packages": ["certifi", "cryptography"]
   },
