otterdog 1.0.1 (new formula)
Signed-off-by: Patrick Linnane <patrick@linnane.io>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -632,6 +632,9 @@
   "osc-cli": {
     "exclude_packages": ["certifi"]
   },
+  "otterdog": {
+    "exclude_packages": ["certifi", "cryptography"]
+  },
   "parliament": {
     "extra_packages": ["setuptools"]
   },
